# ftxui-roguelike-tutorial

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  default  docker-compose.yml  entrypoint.sh
src/: Actor.cpp  Actor.hpp  Color.hpp  Entity.cpp  Entity.hpp  Fighter.hpp  FovMap.cpp  FovMap.hpp  IDigger.hpp  IMapMutator.hpp  Item.cpp  Item.hpp  Map.cpp  Map.hpp  MapGenerator.hpp  MapGeneratorBase.hpp  MessageLog.hpp  NaiveMapGenerator.hpp  Player.hpp  Point.hpp  RNG.hpp  Room.hpp  Tile.cpp  Tile.hpp  World.cpp  World.hpp  index.html  main.cpp
test/: CMakeLists.txt  MapTest.cpp  example.cpp  main.cpp
test/approval_tests/: MapTest.FOV.approved.txt  MapTest.MapGenerator.approved.txt  MapTest.Map_deserialize.approved.txt
